# plonky2

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  proof_with_public_inputs.json  run_proof_tests.sh
.github/workflows/: continuous-integration-workflow.yml
circom/: package-lock.json  package.json
circom/circuits/: goldilocks.circom
circom/test/: goldilcoks.test.js
docs/: circom_diff.md  rust.md
ecdsa/: Cargo.toml
ecdsa/src/gadgets/: biguint.rs
ecgfp5/: Cargo.toml
ecgfp5/src/curve/: curve.rs  scalar_field.rs
ecgfp5/src/gadgets/: mod.rs  poseidon.rs
evm/: Cargo.toml
evm/src/: fixed_recursive_verifier.rs  get_challenges.rs  lib.rs
evm/src/keccak/: keccak_stark.rs
field/: Cargo.toml  build.rs
field/examples/: fft.rs  rayon.rs
field/src/: fft.rs  goldilocks_field.rs  lib.rs  secp256k1_base.rs  types.rs
field/src/polynomial/: mod.rs
plonky2/: Cargo.toml  README.md  build.rs
plonky2/benches/: hashing.rs  lde.rs  merkle.rs
plonky2/benches/allocator/: mod.rs
plonky2/examples/: bench_recursion.rs
plonky2/merkle_avx512/: Makefile  bindings.rs  merkle.cpp  merkle.h
plonky2/src/: bindings.rs  lib.rs  lookup_test.rs
plonky2/src/fri/: challenges.rs  oracle.rs  prover.rs  recursive_verifier.rs  verifier.rs
plonky2/src/gadgets/: hash.rs  interpolation.rs
plonky2/src/gates/: arithmetic_base.rs  arithmetic_extension.rs  base_sum.rs  base_sum_custom.rs  (+21 more)
plonky2/tests/: factorial_test.rs  fibonacci_test.rs  range_check_test.rs  test_utils.rs
starky/src/: get_challenges.rs
u32/: Cargo.toml
util/src/: lib.rs  pre_compute.rs
(+47 files in other folders)
